# fftw-calc

./: .gitignore  CMakeLists.txt  README.md
dependencies/fftw/: .gitignore  CMakeLists.txt  readme.txt
src/: CMakeLists.txt  benchmark.sh  cpuid.c  fftw-calc.c  fftw-io.c
